2008-08-25  Dave Brolley  <brolley@redhat.com>

	* Makefile.am (installcheck): Remove $(EXTRA_SYSTEMTAP_PATH) from
	invocation of $(MAKE).
	* Makefile.in: Regenerated.
	* aclocal.m4: Regenerated.
	* stap-client (parse_options): Don't quote an argument if it is already
	quoted.
	(send_request): Timeout after 10 seconds.
	(receive_response): Timeout after 5 minutes.
	(choose_server): Add missing $ to variable reference.
	(connect_to_server): Timeout after 10 seconds.
	* stap-server (receive_request): Don't check for a "request:"
	message. Timeout after 10 seconds.
	(send_response): Timeout after 10 seconds.
	* stap-serverd (initialization): Remove tmpdir_prefix_serverd and
	port2. No need for a temp directory.
	(listen): Fifo no longer necessary. Call nc and pipe the output to
	process_request in the background.
	(process_request): New function.
	(fatal): Kill stap-server followed by nc. No tmpdir to remove.

2008-08-24  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (query_statement): Leave empty string for unknown file
	name.
	(dwarf_derived_probe ctor): Don't synthesize "@filename:lineno"
	probe point pieces for unknown files/lines.

2008-08-21  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (itrace_derived_probe_group::emit_module_decls):
	Updated task finder callback function signature.
	(utrace_derived_probe_group::emit_module_decls): Ditto.

2008-08-20  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_derived_probe_group::emit_probe_decl):
	Supports original and new utrace interfaces.
	(utrace_derived_probe_group::emit_module_decls): Ditto.

2008-08-20  Dave Brolley  <brolley@redhat.com>

	* stap-client: Ignore SIGHUP and SIGPIPE.
	(initialization): Set b_specified.: 
	(parse_options): Handle the -b option. Quote $stap_arg. Use process_m.
	(process_m): New function.
	(process_o): Set stdout_redirection to simply the filename.
	(process_response): Obtain the exit code from stap on the server side.