@@ -6480,8 +6480,7 @@ utrace_derived_probe_group::emit_module_init (systemtap_session& s)
 
   s.op->newline();
   s.op->newline() << "/* ---- utrace probes ---- */";
-
-  s.op->newline() << "for (i=0; i<" << num_probes << "; i++) {";
+  s.op->newline() << "for (i=0; i<ARRAY_SIZE(stap_utrace_probes); i++) {";
   s.op->indent(1);
   s.op->newline() << "struct stap_utrace_probe *p = &stap_utrace_probes[i];";
   s.op->newline() << "rc = stap_register_task_finder_target(&p->tgt);";
@@ -6511,7 +6510,7 @@ utrace_derived_probe_group::emit_module_exit (systemtap_session& s)
 
   s.op->newline();
   s.op->newline() << "/* ---- utrace probes ---- */";
-  s.op->newline() << "for (i=0; i<" << num_probes << "; i++) {";
+  s.op->newline() << "for (i=0; i<ARRAY_SIZE(stap_utrace_probes); i++) {";
   s.op->indent(1);
   s.op->newline() << "struct stap_utrace_probe *p = &stap_utrace_probes[i];";
 
