@@ -1,3 +1,9 @@
+2008-08-25  David Smith  <dsmith@redhat.com>
+
+	* tapsets.cxx (utrace_derived_probe_group::emit_module_init): Make
+	sure we count the number of utrace probes correctly.
+	(utrace_derived_probe_group::emit_module_exit): Ditto.
+
 2008-08-25  Dave Brolley  <brolley@redhat.com>
 
 	* Makefile.am (installcheck): Remove $(EXTRA_SYSTEMTAP_PATH) from
